# nymea-app

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  apply_consolinno_patches.sh  backup  build_android.sh  build_android_testpatch.sh  build_app.sh  build_appimage.sh  build_ios.sh  build_linux.sh  build_snap.sh  build_windows.cmd  build_windows.ps1  config.h.in  config.h.in.qmake  config.pri  distribute_assets.sh  gen_snap_version.sh  patch_accessibility.py  patch_test_version.sh  shared.pri  version.txt
.github/workflows/: build_android.yml  build_appimage.yml  build_dummy.yml  build_ios.yml  build_snap.yml  build_windows.yml  publish.yml
configuration-files/Consolinno-HEMS/: Configuration.qml  overlay.qrc
experiences/: CMakeLists.txt
experiences/evdash/: CMakeLists.txt
libnymea-app/: CMakeLists.txt  applogcontroller.cpp  interfacesmodel.cpp  libnymea-app-core.h  libnymea-app.pri  tagsmanager.cpp  thingmanager.cpp  thingmanager.h  usermanager.cpp
libnymea-app/configuration/: networkmanager.cpp  networkmanager.h
libnymea-app/connection/: networkreachabilitymonitor.cpp  nymeaconnection.cpp  nymeaconnection.h  nymeahosts.h  nymeatransportinterface.h  tunnelproxytransport.cpp  tunnelproxytransport.h  websockettransport.cpp  websockettransport.h
libnymea-app/connection/discovery/: nymeadiscovery.cpp
libnymea-app/energy/: energymanager.cpp  energymanager.h
libnymea-app/jsonrpc/: jsonrpcclient.cpp  jsonrpcclient.h
libnymea-app/system/: systemcontroller.cpp
libnymea-app/types/: movingaverage.cpp  movingaverage.h  types.cpp  types.h
nymea-app/: CMakeLists.txt  configuredhostsmodel.cpp  images.qrc  main.cpp  nymea-app.pro  platformhelper.cpp  platformhelper.h  pushnotifications.cpp  pushnotifications.h  resources.qrc  stylecontroller.cpp  stylecontroller.h  styles.qrc
nymea-app/platformintegration/android/: platformhelperandroid.cpp  platformhelperandroid.h
nymea-app/platformintegration/android/java-firebase/io/guh/nymeaapp/: NymeaAppNotificationService.java
nymea-app/platformintegration/android/java/io/guh/nymeaapp/: NymeaAppActivity.java
nymea-app/platformintegration/generic/: platformhelpergeneric.cpp
nymea-app/platformintegration/ios/: platformhelperios.cpp  platformhelperios.h  platformhelperios.mm
nymea-app/styles/dark/: qmldir
nymea-app/styles/energize/: qmldir
nymea-app/styles/light/: qmldir
nymea-app/styles/lime/: qmldir
nymea-app/styles/mellow/: qmldir
nymea-app/styles/noir/: qmldir
nymea-app/translations/: nymea-app-de.ts  nymea-app-en.ts  nymea-app-en_US.ts  nymea-app-it.ts  nymea-app-ko.ts  nymea-app-nl.ts  nymea-app-tr.ts  nymea-app-vi.ts  nymea-app.cs.ts  nymea-app.de.ts  nymea-app.en.ts  nymea-app.en_US.ts  nymea-app.it.ts  nymea-app.ko.ts  nymea-app.nl.ts  nymea-app.tr.ts  nymea-app.vi.ts
nymea-app/ui/: ConfigurationBase.qml  InvalidHEMSVersionPopup.qml  KeyboardLoader.qml  MainMenu.qml  MainPage.qml  Nymea.qml  PushButtonAuthPage.qml  RootItem.qml  SettingsPage.qml  StyleBase.qml
nymea-app/ui/appsettings/: AboutPage.qml  AppLogPage.qml  AppSettingsPage.qml  CloudLoginPage.qml  LoggingCategories.qml
nymea-app/ui/components/: BatteryStatusIcon.qml  EmptyViewPlaceholder.qml  ListViewDragComponent.qml  MainPageTabButton.qml  MainViewBase.qml  MediaBrowser.qml  NavigationPad.qml  NymeaDialog.qml  NymeaHeader.qml  NymeaItemDelegate.qml  NymeaSpinBox.qml  SecondaryButton.qml  SettingsPageBase.qml  StateDial.qml  ThingContextMenu.qml  ThingInfoPane.qml  WizardPageBase.qml
nymea-app/ui/connection/: ConnectPage.qml  ConnectingPage.qml  ConnectionWizard.qml  LoginPage.qml  ManualConnectPage.qml  ManualConnectionEntry.qml  NewConnectionWizard.qml
nymea-app/ui/customviews/: GenericTypeGraph.qml  MultiStateChart.qml  StateChart.qml
nymea-app/ui/delegates/: BrowserItemDelegate.qml  ParamDelegate.qml  StateDelegate.qml
nymea-app/ui/delegates/statedelegates/: CheckboxDelegate.qml  ColorDelegate.qml  ComboBoxDelegate.qml  DateTimeDelegate.qml  LabelDelegate.qml  LedDelegate.qml  ListDelegate.qml  NumberLabelDelegate.qml  SliderDelegate.qml  SpinBoxDelegate.qml  SwitchDelegate.qml  TextFieldDelegate.qml
nymea-app/ui/devicepages/: DeviceBrowserPage.qml  DeviceDetailsPage.qml  DeviceLogPage.qml  DoorbellDevicePage.qml  GenericThingPage.qml  IrrigationDevicePage.qml  SmartMeterDevicePage.qml  ThingLogPage.qml  ThingPageBase.qml
nymea-app/ui/icons/material/: icons.qrc
nymea-app/ui/icons/suru/: icons.qrc
nymea-app/ui/magic/: EventDescriptorDelegate.qml  ScriptEditor.qml  ScriptsPage.qml  ThingRulesPage.qml
nymea-app/ui/mainviews/: AirConditioningView.qml  EnergyPieChartDelegate.qml  EnergyView.qml  FavoritesView.qml
nymea-app/ui/mainviews/airconditioning/: ACChartsPage.qml  ACSettingsPage.qml  EditZonePage.qml  EditZoneThingsPage.qml
nymea-app/ui/mainviews/energy/: ConsumerStats.qml  ConsumersHistory.qml  ConsumersPieChart.qml  CurrentConsumptionBalancePieChart.qml  CurrentProductionBalancePieChart.qml  PowerBalanceHistory.qml  PowerBalanceStats.qml  PowerConsumptionBalanceHistory.qml  PowerProductionBalanceHistory.qml  StatsBase.qml
nymea-app/ui/system/: AboutNymeaPage.qml  AdvancedConnectionInterfacesPage.qml  ConnectionInterfacesPage.qml  GeneralSettingsPage.qml  LogViewerPage.qml  LogViewerPagePre18.qml  ModbusRtuAddMasterPage.qml  ModbusRtuReconfigureMasterPage.qml  ModbusRtuSettingsPage.qml  NetworkSettingsPage.qml  PluginParamsPage.qml  PluginsPage.qml  UsersSettingsPage.qml  ZigbeeNetworkPage.qml
nymea-app/ui/system/zigbee/: ZigbeeAddNetworkPage.qml  ZigbeeNetworkPage.qml  ZigbeeNetworkSettingsPage.qml  ZigbeeNetworkTopologyPage.qml  ZigbeeNodePage.qml  ZigbeeSettingsPage.qml
nymea-app/ui/system/zwave/: ZWaveAddNetworkPage.qml  ZWaveNetworkPage.qml  ZWaveNetworkSettingsPage.qml  ZWaveSettingsPage.qml
nymea-app/ui/thingconfiguration/: ConfigureThingPage.qml  EditThingsPage.qml  NewThingPage.qml  SetupWizard.qml
nymea-app/ui/utils/: NymeaUtils.qml  ThingClassConfig.qml
packaging/android/: AndroidManifest.xml  (+2 more)
scripts/: build_patched_android_local.sh  firstRun.sh  install_aab.sh  update_overlay.sh
(+33 files in other folders)
